--- a/06_js1_2_home_cond_func/index-JS1-2-hw.html
+++ b/06_js1_2_home_cond_func/index-JS1-2-hw.html
@@ -17,7 +17,9 @@
   <h1>HOMEWORK JS1-2 week-06 <br> by Magdalena /HYF /class 12 <br>
     <a href="https://github.com/HackYourFuture-CPH/JavaScript/blob/master/javascript1/week2/homework.md">JS1-2 : :
       instructions </a>
-  </h1> <br>
+  </h1> <br> 
+
+  <h2>It's JS so ---> fn + F12 ---> console !!!</h2> <br>
 
   <p>1. My codeCamp profile is <a href="https://www.freecodecamp.org/mag-da-lenka">here</a>.</p>
   <p>2. Flight booking full name function + formal fullname</p>
