--- a/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
+++ b/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
@@ -3,14 +3,17 @@
 
 <head>
 
-  <!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena S. Wojtakowska">--->
+  <meta name="description" content="hack_your_future curriculum">
+  <meta name="keywords" content="front-end">
+  <meta name="author" content="squirrel mag">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>JS1-1 week 05 CLASS exercises 2019-11-03</title>
+  <title>05 JavaScript 1.1 class</title>
+
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
   <link rel="stylesheet" href="w05-JS1-1-class-notes-variables_operators-style.css">
 
@@ -21,22 +24,28 @@
 
 <body>
 
-  <h1>JS1-1 week 05 CLASS exercises 2019-11-03<br> VARIABLES, OPERATORS <br>
-    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week1">JS1-1</a>
-  </h1>
-  <br>
+  <h1>
+    : : JS1-1 : : week 05 : : <br>
+    : : class exercises : : 2019-11-03 : :<br>
+    : : variables : : operators : :
+  </h1> <br>
 
-  <h2>It's JS so ---> fn + F12 ---> console !!! </h2> <br>
+  <h2>: : fn + F12 === console : : </h2>
+
+  <h2>: : instructions > 
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week1">
+      JS1-1
+    </a> : :
+  </h2> <br>
 
 
 
-
-  <h3>EXERCISES: </h3> <br>
+  <h2>: : EXERCISES : : </h2> <br>
 
   <p>With pen and paper write down what is logged out</p> <br>
 
   <p>Follow up exercises <br>
-  <ul>
+  <ul> <br>
     <li>Create a variable that is 24 times 55</li>
     <li>Create a const and set it to be equal to your name</li>
     <li> With javascript console.log the first character in your name</li>
