--- a/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
+++ b/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
@@ -25,7 +25,7 @@
 <body>
 
   <h1>
-    : : JS1-1 : : week 05 : : <br>
+    : : js1-1 : : week 05 : : <br>
     : : class exercises : : 2019-11-03 : :<br>
     : : variables : : operators : :
   </h1> <br>
@@ -34,24 +34,24 @@
 
   <h2>: : instructions > 
     <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week1">
-      JS1-1
+      js1-1
     </a> : :
   </h2> <br>
 
 
 
-  <h2>: : EXERCISES : : </h2> <br>
+  <h2>: : exercises : : </h2> <br>
 
-  <p>With pen and paper write down what is logged out</p> <br>
+  <p>with pen and paper write down what is logged out</p> <br>
 
-  <p>Follow up exercises <br>
+  <p>follow up exercises <br>
   <ul> <br>
-    <li>Create a variable that is 24 times 55</li>
-    <li>Create a const and set it to be equal to your name</li>
-    <li> With javascript console.log the first character in your name</li>
-    <li>Create an array with 3 strings, three numbers and three booleans</li>
+    <li>create a variable that is 24 times 55</li>
+    <li>create a const and set it to be equal to your name</li>
+    <li>with javascript console.log the first character in your name</li>
+    <li>create an array with 3 strings, three numbers and three booleans</li>
     <li>console.log the 4. element in the array made above</li>
-    <li> Optional with javascript console.log the last character in your name.</li>
+    <li>optional: with javascript console.log the last character in your name</li>
   </ul>
   </p> <br>
 
