--- a/05_js1_1_home_variables_math_comparson/index-JS1-1-hw.html
+++ b/05_js1_1_home_variables_math_comparson/index-JS1-1-hw.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena W.">--->
+<meta name="description" content="hack_your_future curriculum">
+<meta name="keywords" content="front-end">
+<meta name="author" content="squirrel mag">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<title>HOMEWORK JS1-1 week-05 </title>
+<title>05 JavaScript 1.1 homework</title>
+
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
 <link rel="stylesheet" href="main-JS1-1-hw.css">
-<script type="text/javascript" src="main-JS1-1-hw.js"></script>
+
 
 <body>
-  <h1>HOMEWORK JS1-1 week-05 by Magdalena /HYF /class 12</h1> <br>
-  <p>It's JS so ---> fn + F12 ---> console !!! </p> <br>
+
+  <h1>
+    : : js1-1 : : week 05 : : <br>
+    : : homework : : 2019-11-03 : :<br>
+    : : variables : : operators : :
+  </h1> <br>
+
+  <h2>: : fn + F12 === console : : </h2>
+
+  <h2>: : instructions >
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week1">
+      js1-1
+    </a> : :
+  </h2> <br>
+
+  <h2>: : exercises : : </h2> <br>
+
   <p>Step 1 > done.</p>
   <p>Step 2 > done. My username on Codecamp is <strong>mag-da-lenka</strong></p>
   <p>Step 3 > done. Please see the attached JS file.</p>
-  
+
+  <script type="text/javascript" src="main-JS1-1-hw.js"></script>
+
 </body>
 
 </html>
