--- a/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
+++ b/05_js1_1_class_variables_math_comparison/w05-JS1-1-class-notes-variables_operators.html
@@ -25,14 +25,14 @@
 <body>
 
   <h1>
-    : : js1-1 : : week 05 : : <br>
+    : : week 05 : : js1-1 : : <br>
     : : class exercises : : 2019-11-03 : :<br>
     : : variables : : operators : :
   </h1> <br>
 
   <h2>: : fn + F12 === console : : </h2>
 
-  <h2>: : instructions > 
+  <h2>: : instructions >
     <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week1">
       js1-1
     </a> : :
