--- a/05_js1_1_home_variables_math_comparson/index-JS1-1-hw.html
+++ b/05_js1_1_home_variables_math_comparson/index-JS1-1-hw.html
@@ -19,7 +19,7 @@
 <body>
 
   <h1>
-    : : js1-1 : : week 05 : : <br>
+    : : week 05 : : js1-1 : : <br>
     : : homework : : 2019-11-03 : :<br>
     : : variables : : operators : :
   </h1> <br>
