--- a/06_js1_2_class_cond_func/w06-JS1-2-class-notes-if_func_scope_loop.html
+++ b/06_js1_2_class_cond_func/w06-JS1-2-class-notes-if_func_scope_loop.html
@@ -3,14 +3,17 @@
 
 <head>
 
-  <!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena S. Wojtakowska">--->
+  <meta name="description" content="hack_your_future curriculum">
+  <meta name="keywords" content="front-end">
+  <meta name="author" content="squirrel mag">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>JS1-2 week 06 CLASS exercises 2019-11-10</title>
+  <title>06 JavaScript 1.2 class</title>
+
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
   <link rel="stylesheet" href="w06-JS1-2-class-notes-if_func_scope_loop-style.css">
 
@@ -21,27 +24,39 @@
 
 <body>
 
-  <h1>JS1-2 week 06 CLASS exercises 2019-11-10 <br>
-    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week2">JS1-2</a>
+
+  <h1>
+    : : week 06 : : js1-2 : : <br>
+    : : class exercises : : 2019-11-10 : :<br>
+    : : if : : function : : forLoop : : scope : :
   </h1> <br>
 
-  <h2>It's JS so ---> fn + F12 ---> console !!! </h2> <br>
+  <h2>: : fn + F12 === console : : </h2>
 
-  <h3>IF statements, FUNCTIONS, forLOOP, SCOPE</h3> <br>
+  <h2>: : instructions >
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week2">
+      js1-1
+    </a> : :
+  </h2> <br>
 
-  <h3> The official lesson plan > done: </h3> <br>
-  
+  <h2>: : exercises : : </h2> <br>
 
-  <p> 1. IF sentences</p>
-  <p> 2. functions: getCircleArea and celciusToFahrenheit </p>
-  <p> ---> extras: multiplying, calculateAge in 11 versions)</p>
-  <p> 3. Scope</p>
-  <p> 4. simple FOR loop</p>
-  <p> 5. FOR loop in a function</p>
-  <p> 6. send emails</p>
+  <p> 1. if statements</p>
+  <p> 2. functions
+  <ul>
+    <li>getCircleArea</li>
+    <li>celciusToFahrenheit</li>
+    <li>multiplying, calculateAge</li>
+  </ul>
+  </p>
+  <p> 3. scope</p>
+  <p> 4. simple forLoop</p>
+  <p> 5. forLoop in a function</p>
+  <p> 6. emails</p>
 
-  <script type="text/javascript" src="w06-JS1-2-class-notes-if_func_scope_loop-script.js">
-  </script>
+  <script type="text/javascript" src="w06-JS1-2-class-notes-if_func_scope_loop-script.js"> </script>
+
+
 </body>
 
 </html>
