--- a/06_js1_2_home_cond_func/index-JS1-2-hw.html
+++ b/06_js1_2_home_cond_func/index-JS1-2-hw.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena W.">--->
+<meta name="description" content="hack_your_future curriculum">
+<meta name="keywords" content="front-end">
+<meta name="author" content="squirrel mag">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<title>HOMEWORK JS1-1 week-05 </title>
+<title>06 JavaScript 1.2 homework</title>
+
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
 <link rel="stylesheet" href="main-JS1-2-hw.css">
-<script type="text/javascript" src="main-JS1-2-full.js"></script>
+
 
 <body>
-  <h1>HOMEWORK JS1-2 week-06 <br> by Magdalena /HYF /class 12 <br>
-    <a href="https://github.com/HackYourFuture-CPH/JavaScript/blob/master/javascript1/week2/homework.md">JS1-2 : :
-      instructions </a>
-  </h1> <br> 
 
-  <h2>It's JS so ---> fn + F12 ---> console !!!</h2> <br>
+  <h1>
+    : : week 06 : : js1-2 : : <br>
+    : : homework : : 2019-11-10 : :<br>
+    : : if : : function : : forLoop : : scope : :
+  </h1> <br>
+
+  <h2>: : fn + F12 === console : : </h2>
+
+  <h2>: : instructions >
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week2">
+      js1-2
+    </a> : :
+  </h2> <br>
+
+  <h2>: : exercises : : </h2> <br>
 
   <p>1. My codeCamp profile is <a href="https://www.freecodecamp.org/mag-da-lenka">here</a>.</p>
-  <p>2. Flight booking full name function + formal fullname</p>
+  <p>2. Flight booking function <br>
+    --> full name + formal fullname (in 3mln versions)</p>
   <p>3. Event application</p>
   <p>4. Weather wear</p>
   <p>5. Student manager</p>
   <p>6. Candy helper*</p>
   <p>7. Rover the Robot*</p>
+  <p>8. Magda's date formatting style :-) </p>
+
+  <script type="text/javascript" src="main-JS1-2-full.js"></script>
 
 </body>
 
