--- a/07_js1_3_class_arrays_objects_callstack/w07-JS1-3-class-notes-arrays-objects-callstack.html
+++ b/07_js1_3_class_arrays_objects_callstack/w07-JS1-3-class-notes-arrays-objects-callstack.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena S. Wojtakowska">--->
+<meta name="description" content="hack_your_future curriculum">
+<meta name="keywords" content="front-end">
+<meta name="author" content="squirrel mag">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<title>JS1-3 week 07 CLASS exercises 2019-11-17 </title>
+<title>07 JavaScript 1.3 class</title>
+
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
+
+
 
 <link rel="stylesheet" href="w07-JS1-3-class-notes-arrays-objects-callstack-style.css">
-<script type="text/javascript" src="w07-JS1-3-class-notes-arrays-objects-callstack-script.js"></script>
+
 
 
 
@@ -19,24 +25,31 @@
 
 <body>
 
-
-  <h1>JS1-3 week 07 <br> CLASS exercises 2019-11-17 <br>
-    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week3">JS1-3</a>
+  <h1>
+    : : week 07 : : js1-3 : : <br>
+    : : class exercises : : 2019-11-17 : :<br>
+    : : arrays : : objects : : callstack : :
   </h1> <br>
 
-  <h2>It's JS so ---> fn + F12 ---> console !!!</h2> <br>
+  <h2>: : fn + F12 === console : : </h2>
 
-  <h3>ARRAYS, OBJECTS, CALLSTACK</h3> <br>
+  <h2>: : instructions >
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week3">
+      js1-3
+    </a> : :
+  </h2> <br>
+
+  <h2>: : exercises : : </h2> <br>
 
   <h3> The official lesson plan has the following EXERCISES </h3>
-  <p>and _NOT_ all of them are here</p><br>
+  <!-- <p>and _NOT_ all of them are here</p><br> -->
 
-  <p> 0. CLASS TRANSCRIPT</p>
-  <p> 1. Callstack on paper</p>
-  <p> 2. Codewars </p>
+  <p> 0. transcript</p>
+  <p> 1. callstack on paper</p>
+  <p> 2. codewars </p>
   <!-- <p>  /only the beginning </p> -->
 
-
+  <script type="text/javascript" src="w07-JS1-3-class-notes-arrays-objects-callstack-script.js"></script>
 
 </body>
 
