--- a/07_js1_3_home_arrays_objects_callstack/index-JS1-3-hw-draft.html
+++ b/07_js1_3_home_arrays_objects_callstack/index-JS1-3-hw-draft.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--<meta name="description" content="HYF12 ........">
-<meta name="keywords" content="front-end, HackYourFuture#12">
-<meta name="author" content="Magdalena W.">--->
+<meta name="description" content="hack_your_future curriculum">
+<meta name="keywords" content="front-end">
+<meta name="author" content="squirrel mag">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<title>HOMEWORK JS1-1 week-07 </title>
+<title>07 JavaScript 1.3 homework</title>
+
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
+
 
 <link rel="stylesheet" href="style-JS1-3-hw-draft.css">
-<script type="text/javascript" src="script-JS1-3-hw-draft.js"></script>
+
 
 <body>
 
 
-  <h1>HOMEWORK JS1-3 week-07 <br> by Magdalena /HYF /class 12 <br>
-    <a href="https://github.com/HackYourFuture-CPH/JavaScript/blob/master/javascript1/week3/homework.md">
-      JS1-3 hw : : instructions </a>
+  <h1>
+    : : week 07 : : js1-3 : : <br>
+    : : homework : : 2019-11-17 : :<br>
+    : : arrays : : objects : : callstack : :
   </h1> <br>
 
-  <h2>It's JS so ---> fn + F12 ---> console !!!</h2> <br>
+  <h2>: : fn + F12 === console : : </h2>
+
+  <h2>: : instructions >
+    <a href="https://github.com/HackYourFuture-CPH/JavaScript/tree/master/javascript1/week3">
+      js1-3
+    </a> : :
+  </h2> <br>
+
+  <h2>: : exercises : : </h2> <br>
 
   <p>1. My codeCamp profile is <a href="https://www.freecodecamp.org/mag-da-lenka">here.</a></p>
   <p>2. Item array removal</p>
@@ -30,6 +44,8 @@
   <p>5. My favorite songs</p>
   <p>6. NOnoN0nOYes (Note taking app)</p>
   <p>7. CactusIO-interactive (Smart phone usage app) optional</p>
+
+  <script type="text/javascript" src="script-JS1-3-hw-draft.js"></script>
 
 </body>
 
