--- a/11_js2_3_class_callback_async/w11-JS2-3-class-notes-callback-asynchro-scope-index.html
+++ b/11_js2_3_class_callback_async/w11-JS2-3-class-notes-callback-asynchro-scope-index.html
@@ -39,7 +39,7 @@
 
 
 
-  <h2>: : reparation : :</h2> <br>
+  <h2>: : preparation : :</h2> <br>
 
   <ul>01. Callback functions === higher order funcions
     <li>
