--- a/03_html_css_3_home_online_form/w03_hw_form/index.html
+++ b/03_html_css_3_home_online_form/w03_hw_form/index.html
@@ -37,7 +37,7 @@
 
 
 
-  <form id="form1" method="post" action="success.html">
+  <form id="form1" method="post" action="https://github.com/mag-da-lenka/hack_your_future/blob/main/03_html_css_3_home_online_form/w03_hw_form/success.html">
 
     <div class="pc-tab">
       <!-- keep the inactive tabs hidden -->
