--- a/09_js2_1_class_dom/w09-JS2-1-class-notes-dom_manipulation-index.html
+++ b/09_js2_1_class_dom/w09-JS2-1-class-notes-dom_manipulation-index.html
@@ -13,6 +13,8 @@
 
   <title>09 JavaScript 2.1 class</title>
 
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
   <link rel="stylesheet" href="w09-JS2-1-class-notes-style.css">
 
 </head>
