--- a/09_js2_1_home_dom/js2_1_median_shortestword_spiritanimal/index_js2_1_hw_medianaverage_shortestword_spiritanimal.html
+++ b/09_js2_1_home_dom/js2_1_median_shortestword_spiritanimal/index_js2_1_hw_medianaverage_shortestword_spiritanimal.html
@@ -9,6 +9,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
 <title>09 JavaScript 2.1 homework</title>
 
 <link rel="stylesheet" href="style_js2_1_hw.css">
