--- a/10_js2_2_class_foreach_map_arrowfunc/w10_cl_js2_2.html
+++ b/10_js2_2_class_foreach_map_arrowfunc/w10_cl_js2_2.html
@@ -9,7 +9,9 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
   <title>10 JavaScript 2.2 class</title>
 
