--- a/11_js2_3_class_callback_async/w11-JS2-3-class-notes-callback-asynchro-scope-index.html
+++ b/11_js2_3_class_callback_async/w11-JS2-3-class-notes-callback-asynchro-scope-index.html
@@ -9,7 +9,9 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
   <title>11 JavaScript 2.3 class</title>
 
