--- a/11_js2_3_home_callback_async/warmup_js2_3/warmup.html
+++ b/11_js2_3_home_callback_async/warmup_js2_3/warmup.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
   <title>11 JavaScript 2.3 homework</title>
 
   <link rel="stylesheet" href="warmup.css">
